# _Basics

./: PY_RS_EXTENSION.txt  WHY BENCHMARKING_RS_PY.txt  encrypt.py  encrypt_1.py  sieve_rs.rs
DECORATORS/: 1.txt  dec_args.py  deco_0.py  memoization.py
Multiprocessing/: Multi_processing.py  THREADING.py  multi_threding_2.py  multiprocess.py  multiprocess2.py  multiprocess_locks.py  multiprocess_locks_WO_dec.py  multiprocess_locks_dec.py  multiprocess_locks_dec2.py  multiprocess_locks_dec_FINAL.py  multiprocess_logging.py  multiprocess_pool.py  multiprocess_queue.py
Others/: MetaClasses.py  __new__vs__init__.py  context_managers.py  eval.py  log.py  logger.py  pickle_1.py  sameline+flush.py  sdf.py  subP.py  super.py  tqdm_new.py
REG_EXP/: REG_2.py  regular_exp.py
argparse/: argparse_1.py  argparse_2.py
c_Extension/: HOW_TO.txt  fputs_test.py  helloworld_c.py
c_Extension/fputsmodule/: fputsmodule.c  setup.py
c_Extension/helloWorld/: greetmodule.c  setup.py
c_Extension/helloWorld/greet.egg-info/: PKG-INFO  SOURCES.txt
rust_Extension/lenrs/: Cargo.toml  setup.py
rust_Extension/lenrs/lenrs/: ___init__.py
rust_Extension/lenrs/src/: lib.rs
