[package]
name = "lenrs"
version = "0.1.0"
authors = ["sarafanshul <anshulsaraf3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.pyo3]
version = "0.4.0"
features = ["extension-module"]

[lib]
crate-type = ["cdylib"]
name = "lenrs"